discussion added comment on STB knots

--- a/References/references.bib
+++ b/References/references.bib
@@ -122,6 +122,24 @@
 	url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkw967}
 }
 
+@article{loukeris2010,
+	title = {Syncytial knots as a reflection of placental maturity: reference values for 20 to 40 weeks' gestational age},
+	volume = {13},
+	issn = {1093-5266},
+	shorttitle = {Syncytial knots as a reflection of placental maturity},
+	doi = {10.2350/09-08-0692-OA.1},
+	abstract = {Syncytiotrophoblastic knots or syncytial knots are aggregates of syncytial nuclei at the surface of terminal villi. In the term placenta, most syncytial knots are thought to be artifacts from tangential sectioning while the minority are syncytial sprouts, bridges, or apoptotic knots. Syncytial knots are consistently present, increasing with increasing gestational age, and can be used to evaluate villous maturity. Increased syncytial knots are associated with conditions of uteroplacental malperfusion and are important in placental examination. Although 30\% of terminal villi with syncytial knots at term are often reported, no reference values have been developed for the percentage of villi with syncytial knots at different gestational ages. We counted the percentage of chorionic villi with syncytial knots at different gestational ages from 20 to 40 weeks using cases with no history of malperfusion or clinical conditions known to be associated with malperfusion. We provide normal reference data for the average percentage of syncytial knots for gestational ages ranging from 20 to 40 weeks. There was a significant positive correlation of gestational age with percentage of villi with syncytial knots. Term placentas (37-40 weeks) showed an average of 28\% syncytial knots. A drop-off to a mean of 22.5\% was noted at 36 weeks; at 26 to 33 weeks, syncytial knots varied from 10.8\% to 14.7\%; between 20 and 25 weeks, syncytial knots ranged between 5.2\% and 9.l\%. These reference data can facilitate histologic assessment of normal placental maturation as well as evaluation of placental morphology in placental malperfusion.},
+	language = {eng},
+	number = {4},
+	journal = {Pediatric and Developmental Pathology: The Official Journal of the Society for Pediatric Pathology and the Paediatric Pathology Society},
+	author = {Loukeris, Kristina and Sela, Raanan and Baergen, Rebecca N.},
+	month = aug,
+	year = {2010},
+	pmid = {20017638},
+	keywords = {Adult, Cell Nucleus, Female, Gestational Age, Humans, Placentation, Pregnancy, Reference Values, Trophoblasts},
+	pages = {305--309},
+}
+
 @article{grigoriu2011,
 	title = {Cell specific patterns of methylation in the human placenta},
 	author = {{Grigoriu}, {Ariadna} and {Ferreira}, {Jose Carlos} and {Choufani}, {Sanaa} and {Baczyk}, {Dora} and {Kingdom}, {John} and {Weksberg}, {Rosanna}},
