add paragraph on placental function

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,32 @@
 
+@article{napso2018,
+	title = {The {Role} of {Placental} {Hormones} in {Mediating} {Maternal} {Adaptations} to {Support} {Pregnancy} and {Lactation}},
+	volume = {9},
+	issn = {1664-042X},
+	url = {https://www.frontiersin.org/article/10.3389/fphys.2018.01091},
+	doi = {10.3389/fphys.2018.01091},
+	abstract = {During pregnancy, the mother must adapt her body systems to support nutrient and oxygen supply for growth of the baby in utero and during the subsequent lactation. These include changes in the cardiovascular, pulmonary, immune and metabolic systems of the mother. Failure to appropriately adjust maternal physiology to the pregnant state may result in pregnancy complications, including gestational diabetes and abnormal birth weight, which can further lead to a range of medically significant complications for the mother and baby. The placenta, which forms the functional interface separating the maternal and fetal circulations, is important for mediating adaptations in maternal physiology. It secretes a plethora of hormones into the maternal circulation which modulate her physiology and transfers the oxygen and nutrients available to the fetus for growth. Among these placental hormones, the prolactin-growth hormone family, steroids and neuropeptides play critical roles in driving maternal physiological adaptations during pregnancy. This review examines the changes that occur in maternal physiology in response to pregnancy and the significance of placental hormone production in mediating such changes.},
+	urldate = {2021-10-10},
+	journal = {Frontiers in Physiology},
+	author = {Napso, Tina and Yong, Hannah E. J. and Lopez-Tello, Jorge and Sferruzzi-Perri, Amanda N.},
+	year = {2018},
+	pages = {1091},
+	file = {Full Text PDF:C\:\\Users\\victo\\Zotero\\storage\\7LSEG9UX\\Napso et al. - 2018 - The Role of Placental Hormones in Mediating Matern.pdf:application/pdf},
+}
+
+@book{wang2010,
+	title = {Placental {Blood} {Circulation}},
+	url = {https://www.ncbi.nlm.nih.gov/books/NBK53254/},
+	abstract = {The placenta is a unique vascular organ that receives blood supplies from both the maternal and the fetal systems and thus has two separate circulatory systems for blood: (1) the maternal-placental (uteroplacental) blood circulation, and (2) the fetal-placental (fetoplacental) blood circulation. The uteroplacental circulation starts with the maternal blood flow into the intervillous space through decidual spiral arteries. Exchange of oxygen and nutrients take place as the maternal blood flows around terminal villi in the intervillous space. The in-flowing maternal arterial blood pushes deoxygenated blood into the endometrial and then uterine veins back to the maternal circulation. The fetal-placental circulation allows the umbilical arteries to carry deoxygenated and nutrient-depleted fetal blood from the fetus to the villous core fetal vessels. After the exchange of oxygen and nutrients, the umbilical vein carries fresh oxygenated and nutrient-rich blood circulating back to the fetal systemic circulation. At term, maternal blood flow to the placenta is approximately 600–700 ml/minute. It is estimated that the surface area of syncytiotrophoblasts is approximately 12m2 [1] and the length of fetal capillaries of a fully developed placenta is approximately 320 kilometers at term [2,3]. The functional unit of maternal-fetal exchange of oxygen and nutrients occur in the terminal villi. No intermingling of maternal and fetal blood occurs in the placenta. Figure 2.1 illustrates (1) the relationship of the uterus, placenta, and the fetus, and (2) the directions of blood flow from mother to the placenta as well as fetal blood flow from the placenta to the fetus.},
+	language = {en},
+	urldate = {2021-10-10},
+	publisher = {Morgan \& Claypool Life Sciences},
+	author = {Wang, Yuping and Zhao, Shuang},
+	year = {2010},
+	note = {Publication Title: Vascular Biology of the Placenta},
+	file = {Snapshot:C\:\\Users\\victo\\Zotero\\storage\\R8LC8AH7\\NBK53254.html:text/html},
+}
+
 @article{chu2017,
 	title = {Interethnic DNA methylation difference and its implications in pharmacoepigenetics},
 	author = {{Chu}, {S. -. K.} and {Yang}, {H. -. C.}},
@@ -2578,4 +2606,53 @@ Type: article},
 	doi = {10.1093/nar/gkt090},
 	url = {http://www.ncbi.nlm.nih.gov/pubmed/23476028},
 	note = {tex.ids= tricheLowlevelProcessingIllumina2013a}
+}
+
+@article{pidsley2016a,
+	title = {Critical evaluation of the Illumina MethylationEPIC BeadChip microarray for whole-genome DNA methylation profiling},
+	author = {{Pidsley}, {Ruth} and {Zotenko}, {Elena} and {Peters}, {Timothy J.} and {Lawrence}, {Mitchell G.} and {Risbridger}, {Gail P.} and {Molloy}, {Peter} and {Van Djik}, {Susan} and {Muhlhausler}, {Beverly} and {Stirzaker}, {Clare} and {Clark}, {Susan J.}},
+	year = {2016},
+	date = {2016},
+	journal = {Genome Biology},
+	pages = {208--208},
+	volume = {17},
+	number = {1},
+	doi = {10.1186/s13059-016-1066-1},
+	url = {http://genomebiology.biomedcentral.com/articles/10.1186/s13059-016-1066-1}
+}
+
+@article{malhotra2019,
+	title = {Neonatal Morbidities of Fetal Growth Restriction: Pathophysiology and Impact},
+	author = {{Malhotra}, {Atul} and {Allison}, {Beth J.} and {Castillo-Melendez}, {Margie} and {Jenkin}, {Graham} and {Polglase}, {Graeme R.} and {Miller}, {Suzanne L.}},
+	year = {2019},
+	date = {2019},
+	journal = {Frontiers in Endocrinology},
+	pages = {55},
+	volume = {10},
+	doi = {10.3389/fendo.2019.00055},
+	url = {https://www.frontiersin.org/article/10.3389/fendo.2019.00055}
+}
+
+@article{napso2018a,
+	title = {The Role of Placental Hormones in Mediating Maternal Adaptations to Support Pregnancy and Lactation},
+	author = {{Napso}, {Tina} and {Yong}, {Hannah E. J.} and {Lopez-Tello}, {Jorge} and {Sferruzzi-Perri}, {Amanda N.}},
+	year = {2018},
+	date = {2018},
+	journal = {Frontiers in Physiology},
+	pages = {1091},
+	volume = {9},
+	doi = {10.3389/fphys.2018.01091},
+	url = {https://www.frontiersin.org/article/10.3389/fphys.2018.01091}
+}
+
+@article{napso2018b,
+	title = {The Role of Placental Hormones in Mediating Maternal Adaptations to Support Pregnancy and Lactation},
+	author = {{Napso}, {Tina} and {Yong}, {Hannah E. J.} and {Lopez-Tello}, {Jorge} and {Sferruzzi-Perri}, {Amanda N.}},
+	year = {2018},
+	date = {2018},
+	journal = {Frontiers in Physiology},
+	pages = {1091},
+	volume = {9},
+	doi = {10.3389/fphys.2018.01091},
+	url = {https://www.frontiersin.org/article/10.3389/fphys.2018.01091}
 }
