--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -31,6 +31,21 @@ Understanding the contributors to DNAm variability and how to account for them i
 In this dissertation, I characterized some of the major contributors to placental DNAm, and have developed bioinformatic methods to predict and account for these factors in future placental DNAm research.
 These factors that influence placental DNAm, - the subjects of this dissertation include ethnicity and genotype, cell-specificity and cell composition dynamics across gestation, and maternal cell contamination.
 
+## Placental function
+
+The placenta is an essential organ that develops from the embryo to nurture its development throughout pregnancy.
+Sometimes described as a "vascular organ", the placenta is responsible for the establishment and regulation of maternal-fetal blood flow.
+Maternal blood is flowed from the uterine spiral arteries into the intervillous space of the placenta.
+Chorionic villi, the main structure of the placenta, are tree-like structures populating the intervillous space that connect to the umbilical cord.
+Deoxygenated and nutrient-depleted fetal blood travels into the chorionic villi, and oxygenated blood returns to the fetus [@wang2010]. Maternal-fetal blood exchange is essential for the proper growth of the fetus, as imbalances, such as placental insufficiency, a condition where the placenta does not deliver sufficient nutrients and oxygen to the developing fetus, can lead to complications such as fetal growth restriction, preeclampsia, and pre-term birth [@malhotra2019]. The placenta also influences the maternal environment (cardiovascular, immune, and metabolic systems) through hormonal processes to support the proper nutrient and oxygen supply to the growing fetus [@napso2018a]. Placental hormones such as those from the proclactin growth hormone family and steroids, are especially important in promoting maternal physiological adaptations to increase the bioavailability of nutrients to the fetus [@napso2018b].
+
+Protect maternal tolerance
+
+The placenta is the intersection between the fetus and the mother, and is responsible for regulating many pregnancy-related processes, such as placental hormones, gas/waste/nutrient exchange, and cell-cell interactions.
+Because of the dynamic nature of pregnancy and constantly shifting demands of the growing fetus, the placenta undergoes constant structural and molecular changes throughout gestation.
+
+It serves as the interface between the growing fetus and materna
+
 ## DNA methylation in the human genome
 
 Despite all cells of the human body being nearly genetically identical, human cell types must coordinate a highly specific gene expression program to fulfill each of their own unique cellular niches.
