intro add about fetomaternal tolerance, and biophysical barrier

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,21 @@
 
+@article{delorme2014,
+	title = {The {Placenta} as a {Barrier} to {Viral} {Infections}},
+	volume = {1},
+	issn = {2327-056X},
+	doi = {10.1146/annurev-virology-031413-085524},
+	abstract = {Throughout pregnancy, the placenta acts as a physical and immunological barrier against the hematogenous transmission of viruses from mother to fetus. Despite this, very little is known regarding the specific mechanisms by which the placenta shields the developing fetus from viral infections or about the strategies utilized by select viruses to bypass and/or weaken the placental barrier. In this review, we summarize studies regarding virus-host interactions at the placental interface and explore key areas for future investigation. We focus our review on placental trophoblasts, which form the barrier between maternal and fetal circulations and thus govern the cross talk between the maternal and fetal microenvironments.},
+	language = {eng},
+	number = {1},
+	journal = {Annual Review of Virology},
+	author = {Delorme-Axford, Elizabeth and Sadovsky, Yoel and Coyne, Carolyn B.},
+	month = nov,
+	year = {2014},
+	pmid = {26958718},
+	keywords = {autophagy, C19MC, miRNA, trophoblast, virus},
+	pages = {133--146},
+}
+
 @article{napso2018,
 	title = {The {Role} of {Placental} {Hormones} in {Mediating} {Maternal} {Adaptations} to {Support} {Pregnancy} and {Lactation}},
 	volume = {9},
@@ -2655,4 +2672,34 @@ Type: article},
 	volume = {9},
 	doi = {10.3389/fphys.2018.01091},
 	url = {https://www.frontiersin.org/article/10.3389/fphys.2018.01091}
+}
+
+@article{guleria2007,
+	title = {Maternal Acceptance of the Fetus: True Human Tolerance},
+	author = {{Guleria}, {Indira} and {Sayegh}, {Mohamed H.}},
+	year = {2007},
+	month = {03},
+	date = {2007-03-15},
+	journal = {The Journal of Immunology},
+	pages = {3345--3351},
+	volume = {178},
+	number = {6},
+	doi = {10.4049/jimmunol.178.6.3345},
+	url = {https://www.jimmunol.org/content/178/6/3345},
+	note = {Publisher: American Association of Immunologists
+Section: BRIEF REVIEWS
+PMID: 17339426},
+	langid = {en}
+}
+
+@article{hoo2020,
+	title = {Innate Immune Mechanisms to Protect Against Infection at the Human Decidual-Placental Interface},
+	author = {{Hoo}, {Regina} and {Nakimuli}, {Annettee} and {Vento-Tormo}, {Roser}},
+	year = {2020},
+	date = {2020},
+	journal = {Frontiers in Immunology},
+	pages = {2070},
+	volume = {11},
+	doi = {10.3389/fimmu.2020.02070},
+	url = {https://www.frontiersin.org/article/10.3389/fimmu.2020.02070}
 }
