--- a/References/references.bib
+++ b/References/references.bib
@@ -1,4 +1,34 @@
 
+@phdthesis{delgobbo2021,
+	title = {Genomic profiling in the placenta : toward a greater understanding of genetic variation contributing to placental insufficiency and fetal growth restriction},
+	shorttitle = {Genomic profiling in the placenta},
+	url = {https://open.library.ubc.ca/soa/cIRcle/collections/ubctheses/24/items/1.0397019},
+	abstract = {Fetal growth restriction (FGR) is a common pregnancy complication in which the fetus does not grow to its genetic potential due to a pathological cause, which puts it at greater risk for morbidity and mortality in the perinatal period and poor health outcomes in childhood and adu},
+	language = {eng},
+	urldate = {2021-10-12},
+	school = {University of British Columbia},
+	author = {Del Gobbo, Giulia F},
+	year = {2021},
+	doi = {10.14288/1.0397019},
+	file = {Full Text PDF:C\:\\Users\\victo\\Zotero\\storage\\GVEIJWQ5\\Gobbo and Francesca - 2021 - Genomic profiling in the placenta  toward a great.pdf:application/pdf;Snapshot:C\:\\Users\\victo\\Zotero\\storage\\ELE6U7B9\\1.html:text/html},
+}
+
+@article{delgobbo2019,
+	title = {The significance of the placental genome and methylome in fetal and maternal health},
+	issn = {1432-1203},
+	url = {https://doi.org/10.1007/s00439-019-02058-w},
+	doi = {10.1007/s00439-019-02058-w},
+	abstract = {The placenta is a crucial organ for supporting a healthy pregnancy, and defective development or function of the placenta is implicated in a number of complications of pregnancy that affect both maternal and fetal health, including maternal preeclampsia, fetal growth restriction, and spontaneous preterm birth. In this review, we highlight the role of the placental genome in mediating fetal and maternal health by discussing the impact of a variety of genetic alterations, from large whole-chromosome aneuploidies to single-nucleotide variants, on placental development and function. We also discuss the placental methylome in relation to its potential applications for refining diagnosis, predicting pathology, and identifying genetic variants with potential functional significance. We conclude that understanding the influence of the placental genome on common placental-mediated pathologies is critical to improving perinatal health outcomes.},
+	language = {en},
+	urldate = {2019-10-31},
+	journal = {Human Genetics},
+	author = {Del Gobbo, Giulia F. and Konwar, Chaini and Robinson, Wendy P.},
+	month = sep,
+	year = {2019},
+	note = {tex.ids= delgobboSignificancePlacentalGenome2020},
+	file = {Springer Full Text PDF:C\:\\Users\\victo\\Zotero\\storage\\I7RW2MN9\\Del Gobbo et al. - 2019 - The significance of the placental genome and methy.pdf:application/pdf;Accepted Version:C\:\\Users\\victo\\Zotero\\storage\\K5M8BNY2\\Del Gobbo et al. - 2020 - The significance of the placental genome and methy.pdf:application/pdf},
+}
+
 @article{delorme2014,
 	title = {The {Placenta} as a {Barrier} to {Viral} {Infections}},
 	volume = {1},
